# rweb_helper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
rweb_base/: Cargo.toml
rweb_base/src/: lib.rs
rweb_helper_macro/: Cargo.toml
rweb_helper_macro/src/: lib.rs
src/: html_response.rs  json_response.rs  lib.rs  status_code_trait.rs
tests/: test_rweb_helper.rs  test_schema.json
