[package]
name = "rweb-helper"
version = "0.5.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9"
serde = { version="1.0", features=["derive"] }
rweb-helper-macro = {path = "./rweb_helper_macro"}
time = {version="0.3", features = ["serde-human-readable"], optional = true}
derive_more = "0.99"
uuid = {version="1.1", features=["serde"]}
rust_decimal = {version="1.26", features=["db-tokio-postgres"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], tag="0.15.1-1"}

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["time"]
