[package]
name = "rweb-helper"
version = "0.5.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
rweb-helper-macro = {path = "./rweb_helper_macro"}
time = {version="0.3", features = ["serde-human-readable"], optional = true}
derive_more = "0.99"
uuid = {version="1.1", features=["serde", "v4"]}
rust_decimal = {version="1.26", features=["db-tokio-postgres"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], tag="0.15.1-1"}
once_cell = "1.0"

[dev-dependencies]
indexmap = "1.9"

[features]
default = ["time"]
