[package]
name = "rweb-helper-macro"
version = "0.3.9"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0", features=["full", "printing", "extra-traits", "parsing"]}
quote = "1.0"
rweb-macros = {git = "https://github.com/ddboline/rweb.git", tag="v0.15.1"}

[lib]
proc-macro = true
