[package]
name = "rweb-helper-macro"
version = "0.4.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="2.0", features=["full", "printing", "extra-traits", "parsing"]}
quote = "1.0"
rweb-macros = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], tag="0.15.1-1"}

[lib]
proc-macro = true
